--- a/BMWControlApp/Resources/layout/Main.axml
+++ b/BMWControlApp/Resources/layout/Main.axml
@@ -4,6 +4,16 @@
     android:background="#009968"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+	<EditText
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/inputText"
+		android:layout_marginBottom="0.0dp" />
+	<Button
+		android:text="Update"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/okButton" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/mRecylcerID"
         android:layout_width="match_parent"
